# robotics_for_developers

./: README.md
r4d_1_single_marker/: CMakeLists.txt  package.xml
r4d_1_single_marker/include/r4d_1_single_marker/: SingleMarkerLocalizer.h
r4d_1_single_marker/launch/: eval.launch
r4d_1_single_marker/scripts/: plot.py
r4d_1_single_marker/src/: single_marker_node.cpp
r4d_2_multimarker/: CMakeLists.txt  package.xml
r4d_2_multimarker/include/r4d_2_multimarker/: MultimarkerLocalizer.h
r4d_2_multimarker/launch/: eval.launch
r4d_2_multimarker/scripts/: plot.py  plot_solve_time.py
r4d_2_multimarker/src/: multimarker_node.cpp
r4d_3_imu/: CMakeLists.txt  package.xml
r4d_3_imu/include/r4d_3_imu/: ImuLocalizer.h
r4d_3_imu/launch/: eval.launch
r4d_3_imu/scripts/: plot.py
r4d_3_imu/src/: imu_node.cpp
r4d_common/: CMakeLists.txt  package.xml  setup.py
r4d_common/include/r4d_common/: BagRunner.h  MarkerFactor.h  gtsam_opencv_interop.h  ros_gtsam_interop.h  ros_opencv_interop.h
r4d_common/src/r4d_common/: plot_tools.py
rcars_detector_msgs/: CMakeLists.txt  README.md  package.xml
rcars_detector_msgs/msg/: Tag.msg  TagArray.msg  TagPoses.msg
