<?xml version="1.0"?>
<package>
  <name>r4d_3_imu</name>
  <version>0.0.0</version>
  <description>The r4d_2_multimarker package</description>

  <maintainer email="nicolov@users.noreply.github.com">nicolov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>r4d_common</build_depend>
  <run_depend>r4d_common</run_depend>

  <export></export>
</package>